# chatter2_client

./: .gitignore  CMakeLists.txt  api-doc.md  backup.txt  command.txt  readme.md  run.ps1  script.md  tmp.md  tmp.txt
.cache/clangd/index/: ChatClient.cpp.142A97303C68A85F.idx  ChatClient.h.90B497D2BCB44386.idx  ChatWindow.cpp.F07B8845D5A4BFE7.idx  ChatWindow.h.6AB0CCB251BA4BAB.idx  GroupChatTab.cpp.A010A89F2EFBFFC3.idx  GroupChatTab.h.1348414983BFE414.idx  JsonConverter.cpp.4659BACC9EBCA9CD.idx  JsonConverter.h.2735AAA4B25B81F0.idx  LoginWindow.cpp.7ED89E3DDFC2F2BB.idx  LoginWindow.h.DC4C5426E8024425.idx  MessageBubble.cpp.FEFB53263479359B.idx  MessageBubble.h.81CF0301F970090C.idx  MessageHandler.cpp.E29E59ECF99CF5EC.idx  MessageHandler.h.808B511C1DFAD96E.idx  PrivateChatTab.cpp.7AA59672430969C4.idx  (+6 more)
resources/: resources.qrc  styles.qss
resources/styles/: chatwindow.qss  messagebubble.qss  styles.qss
src/: GlobalEventBus.h  WindowManager.cpp  main.cpp
src/dialogs/: UserSelectionDialog.cpp  UserSelectionDialog.h
src/network/: ChatClient.cpp  ChatClient.h  MessageProcessor.cpp  MessageProcessor.h
src/ui/: ChatWindow.cpp  ChatWindow.h  GroupChatSession.cpp  GroupChatSession.h  GroupChatTab.cpp  GroupChatTab.h  LoginWindow.cpp  LoginWindow.h  MessageBubble.cpp  MessageBubble.h  PrivateChatSession.cpp  PrivateChatSession.h  PrivateChatTab.cpp  PrivateChatTab.h  PublicChatTab.cpp  PublicChatTab.h  RegisterWindow.cpp  RegisterWindow.h
src/utils/: JsonConverter.cpp  JsonConverter.h  MessageHandler.cpp  MessageHandler.h  UserInfo.h  UserManager.cpp  UserManager.h
